<resources>
    <string name="app_name">DirpenUA</string>

    // Menu Bottom Navigation
    <string name="menu_beranda">Beranda</string>
    <string name="menu_prosedur">Prosedur</string>
    <string name="menu_agenda">Agenda</string>
    <string name="menu_beasiswa">Beasiswa</string>
    <string name="menu_akun">Akun</string>
    <string name="menu_faq">FAQ</string>

    // Submenu Beranda
    <string name="submenu_pengumuman">Pengumuman</string>
    <string name="submenu_berita">Berita</string>
    <string name="submenu_prodi">Program Studi</string>
    <string name="submenu_disabilitas">Relawan Disabilitas</string>
    <string name="submenu_petaproses">Peta Proses Akademik</string>
    <string name="submenu_kalender">Kalender Akademik</string>
    <string name="submenu_akreditasi">Akreditasi</string>
    <string name="submenu_download">Download</string>
    <string name="submenu_dosen">Dosen</string>
    <string name="submenu_mahasiswa">Mahasiswa</string>
    <string name="submenu_user">User</string>

    <string name="submenu_tentang">Tentang Kami</string>
    <string name="unair">Universitas Airlangga</string>
    <string name="motto">Excellence with Morality</string>

    <string-array name="hari">
        <item>Senin</item>
        <item>Selasa</item>
        <item>Rabu</item>
        <item>Kamis</item>
        <item>Jumat</item>
        <item>Sabtu</item>
        <item>Minggu</item>
    </string-array>

    <string-array name="kategoriprosedur">
        <item>Administrasi Pendidikan</item>
        <item>Pengembangan Pendidikan</item>
        <item>Aturan Akademik</item>
        <item>ACTS</item>
        <item>SKPI</item>
    </string-array>

    <string-array name="kategoribeasiswa">
        <item>Info Beasiswa Studi Lanjut</item>
        <item>Pendaftaran Beasiswa</item>
        <item>Klaim SPPD</item>
        <item>Pengembalian Instansi Induk</item>
    </string-array>

    <string-array name="kategoripeserta">
        <item>Berdasarkan nama</item>
        <item>Berdasarkan NIP/NIK</item>
    </string-array>

    <string-array name="relawanmbk">
        <item>Berdasarkan nama</item>
        <item>Berdasarkan NIM</item>
    </string-array>

    <string-array name="listakun">
        <item>Profil</item>
        <item>Email verifikasi</item>
        <item>Ubah password</item>
        <item>Bantuan</item>
        <item>Tentang DirpenUA</item>
    </string-array>

    <integer-array name="logoakun">
        <item>@drawable/ic_akun</item>
        <item>@drawable/ic_email</item>
        <item>@drawable/ic_password</item>
        <item>@drawable/ic_bantuan</item>
        <item>@drawable/ic_tentangaplikasi</item>
    </integer-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_admin">MainActivityAdmin</string>
    <string name="clickdetails"><u>Click for details</u></string>
</resources>
