<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BerandaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="3dp"
            android:orientation="vertical">

            <SearchView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@drawable/round"></SearchView>

            <!-- milik kolom 1 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ic_pengumuman"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:layout_weight="0.2"
                    android:background="@drawable/round"
                    android:src="@drawable/ic_pengumuman" />

                <ImageView
                    android:id="@+id/ic_berita"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:layout_weight="0.2"
                    android:background="@drawable/round"
                    android:src="@drawable/ic_berita" />

                <ImageView
                    android:id="@+id/ic_prodi"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:layout_weight="0.2"
                    android:background="@drawable/round"
                    android:src="@drawable/ic_prodi"
                    android:textAlignment="center" />

                <ImageView
                    android:id="@+id/ic_tentang"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:layout_weight="0.2"
                    android:background="@drawable/round"
                    android:src="@drawable/ic_disabilitas" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_pengumuman"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="0.2"
                    android:text="@string/submenu_pengumuman"
                    android:textAlignment="center"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/txt_berita"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0.2"
                    android:text="@string/submenu_berita"
                    android:textAlignment="center"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/txt_prodi"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0.2"
                    android:text="@string/submenu_prodi"
                    android:textAlignment="center"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/txt_tentang"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0.2"
                    android:text="@string/submenu_disabilitas"
                    android:textAlignment="center"
                    android:textSize="12dp" />
            </LinearLayout>


            <!-- milik kolom 2 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ic_petaproses"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:layout_weight="0.2"
                    android:background="@drawable/round"
                    android:src="@drawable/ic_petaproses" />

                <ImageView
                    android:id="@+id/ic_kalender"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:layout_weight="0.2"
                    android:background="@drawable/round"
                    android:src="@drawable/ic_kalender" />

                <ImageView
                    android:id="@+id/ic_akreditasi"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:layout_weight="0.2"
                    android:background="@drawable/round"
                    android:src="@drawable/ic_akreditasi" />

                <ImageView
                    android:id="@+id/ic_download"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:layout_weight="0.2"
                    android:background="@drawable/round"
                    android:src="@drawable/ic_download" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_petaproses"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:text="@string/submenu_petaproses"
                    android:textAlignment="center"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/txt_kalender"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:text="@string/submenu_kalender"
                    android:textAlignment="center"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/txt_akreditasi"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:text="@string/submenu_akreditasi"
                    android:textAlignment="center"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/txt_download"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:text="@string/submenu_download"
                    android:textAlignment="center"
                    android:textSize="12dp" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@color/Background"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:showIn="@layout/activity_main">

            <com.synnapps.carouselview.CarouselView
                android:id="@+id/image_carousel"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="20dp"
                app:fillColor="#FFFFFF"
                app:pageColor="#7C000000"
                app:radius="6dp"
                app:slideInterval="3000"
                app:strokeColor="#FF777777"
                app:strokeWidth="1dp" />

        </RelativeLayout>
    </LinearLayout>


</FrameLayout>