<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".dosen.BerandaDosenFragment"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/Abu">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimaryDark"
            android:elevation="10dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/logo"
                    app:layout_collapseMode="parallax"
                    android:layout_weight="0"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/roboto_black"
                    android:text="DirpenUA"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:layout_weight="1"/>

                <ImageView
                    android:id="@+id/ic_pengumuman"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/ic_pengumuman"
                    app:layout_collapseMode="parallax"
                    android:layout_weight="0"/>
            </LinearLayout>

        </android.support.v7.widget.Toolbar>

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_marginLeft="20dp"-->
        <!--android:layout_marginRight="20dp"-->
        <!--android:layout_marginBottom="10dp"-->
        <!--android:orientation="vertical"-->
        <!--android:gravity="center">-->

        <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="0"-->
        <!--android:gravity="end"-->
        <!--android:textStyle="bold"-->
        <!--android:text="Selamat datang, "-->
        <!--android:textColor="@color/colorPrimaryDark"-->
        <!--android:textSize="12dp"/>-->

        <!--<TextView-->
        <!--android:id="@+id/namalengkap"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--android:textSize="14dp"-->
        <!--android:layout_gravity="end"-->
        <!--android:textColor="@color/colorPrimaryDark"-->
        <!--android:text="nama lengkapnya siapa"/>-->
        <!--</LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="3dp"
            android:layout_margin="8dp"
            android:background="@drawable/whiteround"
            android:orientation="vertical">


            <!-- milik kolom 1 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ic_berita"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="0.2"
                    android:background="@drawable/round"
                    android:src="@drawable/ic_berita" />

                <ImageView
                    android:id="@+id/ic_prodi"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="0.2"
                    android:background="@drawable/round"
                    android:src="@drawable/ic_prodi"
                    android:textAlignment="center" />

                <ImageView
                    android:id="@+id/ic_akreditasi"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="0.2"
                    android:background="@drawable/round"
                    android:src="@drawable/ic_akreditasi" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_berita"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0.2"
                    android:text="@string/submenu_berita"
                    android:textAlignment="center"
                    android:textSize="12dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txt_prodi"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0.2"
                    android:text="@string/submenu_prodi"
                    android:textAlignment="center"
                    android:textSize="12dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txt_akreditasi"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0.2"
                    android:text="@string/submenu_akreditasi"
                    android:textAlignment="center"
                    android:textSize="12dp"
                    android:textStyle="bold"/>

            </LinearLayout>


            <!-- milik kolom 2 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ic_kalender"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="0.2"
                    android:background="@drawable/round"
                    android:src="@drawable/ic_kalender" />

                <ImageView
                    android:id="@+id/ic_tanya"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="0.2"
                    android:background="@drawable/round"
                    android:src="@drawable/ic_tanya" />


                <ImageView
                    android:id="@+id/ic_download"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="0.2"
                    android:background="@drawable/round"
                    android:src="@drawable/ic_download" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_kalender"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:text="@string/submenu_kalender"
                    android:textAlignment="center"
                    android:textSize="12dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txt_disabilitas"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:text="@string/menu_faq"
                    android:textAlignment="center"
                    android:textSize="12dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txt_download"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:text="@string/submenu_download"
                    android:textAlignment="center"
                    android:textSize="12dp"
                    android:textStyle="bold"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Background"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main">

        <com.synnapps.carouselview.CarouselView
            android:id="@+id/image_carousel"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="8dp"
            app:fillColor="#FFFFFF"
            app:pageColor="#7C000000"
            app:radius="6dp"
            app:slideInterval="3000"
            app:strokeColor="#FF777777"
            app:strokeWidth="1dp" />

    </LinearLayout>

</LinearLayout>
